--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -9,12 +9,8 @@
 }
 
 .content {
-  padding: 30px 30px 0 30px;
+  padding: 30px;
   margin-top: 64px;
-}
-
-.footer {
-  text-align: center;
 }
 
 .page {
